# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import catalogueRouter from "./catalogue";
 import sessionsRouter from "./sessions";
 import cartesSessionRouter from "./cartes-session";
 import reponsesRouter from "./reponses";
+import arbitragesRouter from "./arbitrages";
 import constellationRouter from "./constellation";
 
 const router: IRouter = Router();
@@ -13,6 +14,7 @@ router.use(catalogueRouter);
 router.use(sessionsRouter);
 router.use(cartesSessionRouter);
 router.use(reponsesRouter);
+router.use(arbitragesRouter);
 router.use(constellationRouter);
 
 export default router;
